objects/VaultPLTest__c.object
<CustomObject>
    <fields>
        <fullName>ANField__c</fullName>
        <label>ANField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PLField__c</fullName>
        <label>PLField</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                    <default>true</default>
                    <label>a</label>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VaultPLTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VaultPLTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VaultPLTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>